--- a/News/news.css
+++ b/News/news.css
@@ -16,8 +16,52 @@
 .cards{
     background-color: rgb(24, 23, 23);
     min-height: 40vh;
-    width: 30vh;
+    width: 40vh;
     border-radius: 8px;
     margin: 19px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10px;
    
+}
+
+.cards:hover{
+    height: 45vh;
+    width: 45vh;
+}
+
+.slides{
+    position: relative;
+    margin-top: 60px;
+}
+
+.abtText{
+    display: none;
+    position: absolute;
+    top:250px;
+    left: 100px;
+    font-size: 20px;
+}
+.slides:hover{
+    opacity: 0.2;
+}
+
+.slides:hover + .abtText{
+    display: block;
+    color: white;
+}
+
+a button{
+border: 1px solid white;
+background-color: rgb(24, 23, 23) ;
+color: white;
+font-size: 15px;
+font-weight: lighter;
+padding: 5px;
+margin-top: 8px;
+margin-bottom: 5px;
+border-radius: 4px;
+cursor: pointer;
 }
