--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ width: 100%;
   padding: 0px;
   scroll-behavior: smooth;
 }
+.navtext{
+  margin-left: 19px;
+}
+
 .navbar{
   display: flex;
   justify-content: space-between;
@@ -41,6 +45,7 @@ width: 100%;
 a{
   text-decoration: none;
   color: white;
+  margin: 0 10px;
 }
 #name{
   color: rgb(100, 245, 17)
@@ -85,7 +90,8 @@ background-size: cover;
 }
 .welcometext{
   font-size: 35px;
-  font-weight: bolder;  
+  font-weight: bolder; 
+   
   margin-left: 20px;
 }
 
@@ -96,33 +102,33 @@ background-size: cover;
 
 .about{
   margin-top: 20px;
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  
   
 
 }
 .slides{
-  height: 300px;
-  width: 300px;
-}
-.mySlides{
-  object-fit: contain;
+  width: 800px;
+height: 500px;
 }
 
 .abtText{
   height: 200px;
   width: 400px;
-  margin-left: 38px;
+  /* margin-left: 38px; */
 }
 .about p{
   font-size: 20px;
+  margin-left: 10vh;
 
 }
 .about h1{
-  margin-left: 45vh;
   margin-bottom: 10px;
   
-  align-self: flex-start;
+  
   font-size: 40px;
-  justify-self: flex-start;
   text-decoration: underline;
   text-decoration-color:  rgb(100, 245, 17);
   animation: fadeIn 5s;
@@ -132,5 +138,5 @@ background-size: cover;
 .abtContent{
   display: flex;
 flex-direction: row;
-justify-content: center;
+justify-content: flex-start;
 }
